Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2222

running SpeedCrunch doesn't run by default

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 2.0.1
    • None
    • ubuntu 9.10, 32bit, qtsdk-linux-x86-opensource-2010.05-201008301931

      1) download speedcrunch source code
      2) open CMakeLists.txt in Qt Creator
      3) run Cmake in wizard dialog and try to run project
      4) ...
      5) project doesn't run because the default run config is "Custom Executable". However, in the run config dropdown, there is an option "speedcrunch". With default settings, choosing "speedcrunch" run config will make speedcrunch to actually execute.

      -> The default run config should be the correct one.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            holmsted Lasse Holmstedt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes