Make sure we don't leave unconfigured Custom Executable RC laying around

Task-Nr: QTCREATORBUG-2222